--- a/src/index.css
+++ b/src/index.css
@@ -185,3 +185,11 @@ button:focus-visible {
     @apply bg-background text-foreground;
   }
 }
+
+.focus-peaking-btn{
+  margin: 4px;
+  padding: 8px 16px;
+  cursor: pointer; 
+  background: red; 
+  color: white; 
+}
